--- a/Invitee.html
+++ b/Invitee.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="papper.html">Paper</a></li>
                     <li><a href="Invitee.html">Invitation</a></li>
-                    <li><a href="Safetyy.html">Safety</a></li>
+                    <li><a href="index.html">Safety</a></li>
                 </ul>
             </div>
         </div> 
