--- a/papper.html
+++ b/papper.html
@@ -18,7 +18,7 @@
     <nav id="bus">
         <a id="btn" href="Invitee.html">Invitation</a>
         <a id="btn" href="papper.html"> Papper</a>
-        <a id="btn" href="Safetyy.html">Safety</a>
+        <a id="btn" href="index.html">Safety</a>
     </nav>      
     
         <main>
