--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <p>
 
     - Wash your hands often with soap and water for at least 20 seconds especially after you have been in a public place, or after blowing your nose, coughing, or sneezing.<br>
-    - It’s especially important to wash your hands:<br>
+    <br><strong>t’s especially important to wash your hands:</strong><br><br>
     - Before eating or preparing food<br>
     - Before touching your face<br>
    -  After using the restroom<br>
